# BigDog

./: BigDog.pro  CMakeLists.txt  README.md  main.cpp  maintab.cpp  maintab.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  viewcontroller.cpp  viewcontroller.h
BasicGUI/: BasicGUI.pro  BasicGUI.pro.user.fcc074a.3.0-pre1  main.cpp  mainwindow.ui
BigDog/: main.cpp  maintab.cpp  model.cpp  viewcontroller.cpp
GuiRec/: GuiRec.pro  GuiRec.pro.user.fcc074a.3.0-pre1  main.cpp  util.cpp  util.h
PopUpStalker/: PopUpStalker.pro  main.cpp  maintab.cpp  maintab.h  model.cpp  model.h  util.cpp  util.h  viewcontroller.cpp  viewcontroller.h
PopUpStalker/psin/: 1725187752_c.txt  1725553834_c.txt  1725702250_c.txt  1725767987_c.txt  1725770091_c.txt  1725831486_c.txt  1725909771_c.txt  1725919940_c.txt
